test-suite/cases/eure-schema-to-json-schema/errors/invalid-float-infinity.eure
// Test error: Float constraint with Infinity value

schema = ```eure
$variant = "float"
range = "[0.0, Inf]"
```

json_schema_errors[] = "Inf"
